--done variant
