# src/common/configs/swagger-output.json
@@ -510,6 +510,14 @@
       }
     },
     "/attributes/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
       "post": {
         "description": "",
         "parameters": [
@@ -526,14 +534,6 @@
             }
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "get": {
-        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -558,7 +558,7 @@
           }
         }
       },
-      "put": {
+      "delete": {
         "description": "",
         "parameters": [
           {
@@ -574,7 +574,7 @@
           }
         }
       },
-      "delete": {
+      "put": {
         "description": "",
         "parameters": [
           {
@@ -628,6 +628,14 @@
       }
     },
     "/attribute-values/": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
       "post": {
         "description": "",
         "parameters": [
@@ -647,14 +655,6 @@
             }
           }
         ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "get": {
-        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -697,7 +697,7 @@
           }
         }
       },
-      "patch": {
+      "delete": {
         "description": "",
         "parameters": [
           {
@@ -713,7 +713,7 @@
           }
         }
       },
-      "delete": {
+      "patch": {
         "description": "",
         "parameters": [
           {
@@ -766,8 +766,8 @@
         }
       }
     },
-    "/variants/": {
-      "post": {
+    "/product-variants/": {
+      "get": {
         "description": "",
         "responses": {
           "200": {
@@ -775,7 +775,7 @@
           }
         }
       },
-      "get": {
+      "post": {
         "description": "",
         "responses": {
           "200": {
@@ -784,8 +784,24 @@
         }
       }
     },
-    "/variants/{id}": {
+    "/product-variants/{id}": {
       "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "delete": {
         "description": "",
         "parameters": [
           {
@@ -816,7 +832,9 @@
             "description": "OK"
           }
         }
-      },
+      }
+    },
+    "/product-variants/soft/{id}": {
       "delete": {
         "description": "",
         "parameters": [
@@ -834,25 +852,7 @@
         }
       }
     },
-    "/variants/soft/{id}": {
-      "delete": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/variants/restore/{id}": {
+    "/product-variants/restore/{id}": {
       "patch": {
         "description": "",
         "parameters": [
