# src/routes/index.js
@@ -5,7 +5,7 @@ import subCategoryRoutes from "../modules/subcategory/subcategory.routes.js";
 import brandRoutes from "../modules/brand/brand.routes.js";
 import attributeRoutes from "../modules/attribute/attribute.routes.js";
 import attributeValueRoutes from "../modules/attribute_value/attribute_value.routes.js";
-import variantRoutes from "../modules/variant/variant.routes.js";
+import variantRoutes from "../modules/product_variant/product_variant.routes.js";
 import authRoutes from "../modules/auth/auth.router.js";
 
 const router = Router();
@@ -16,7 +16,7 @@ router.use("/sub-categories", subCategoryRoutes);
 router.use("/brands", brandRoutes);
 router.use("/attributes", attributeRoutes);
 router.use("/attribute-values", attributeValueRoutes);
-router.use("/variants", variantRoutes);
+router.use("/product-variants", variantRoutes);
 router.use("/auth", authRoutes);
 
 
